# ssalib

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  publish-zenodo.yml  python-tests.yml
notebooks/: 01_basic_ssa_introduction.ipynb  02_ssa_plotting_guide.ipynb  03_ssa_svd_matrices.ipynb  04_svd_solver_comparison.ipynb  04_svd_solvers.ipynb  05_Rssa_comparison.ipynb  A1_montecarlo_ssa.ipynb
ssalib/: __init__.py  montecarlo_ssa.py  plotting.py  ssa.py
ssalib/datasets/: data_loader.py
ssalib/math_ext/: matrix_operations.py
tests/: conftest.py  test_ar_modeling.py  test_datasets.py  test_math.py  test_matrix_operations.py  test_mcssa.py  test_plotting.py  test_ssa.py  test_svd.py  test_wcorr.py
vassal/: __init__.py  log_and_error.py  math_ext.py  montecarlo_ssa.py  plotting.py  ssa.py  svd.py  wcorr.py
vassal/datasets/: __init__.py  data_loader.py
vassal/math_ext/: ar_modeling.py  matrix_operations.py
