[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssalib"
version = "0.1.0a1"
description = "Singular Spectrum Analysis Library (SSALib)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Damien Delforge", email = "damien.delforge@adscian.be"},
    {name = "Alice Alonso"}
]
urls = {homepage = "https://github.com/ADSCIAN/ssalib"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

keywords = ["singular spectrum analysis", "time series", "decomposition"]

dependencies = [
    "joblib",
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ssalib" = ["datasets/*.txt", "datasets/*.csv", "datasets/*.json"]